# term-mesh

./: .gitignore  .gitmodules  ARCHITECTURE_REVIEW.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  PRD.md  PROJECTS.md  Package.swift  README.ar.md  README.bs.md  README.da.md  README.de.md  README.es.md  README.fr.md  README.it.md  README.ja.md  README.ko.md  README.md  README.no.md  README.pl.md  README.pt-BR.md  README.ru.md  README.th.md  README.tr.md  README.zh-CN.md  README.zh-TW.md  THIRD_PARTY_LICENSES.md  TODO.md  cmux.entitlements  find_leaks.py  ghostty.h  tm-agent
.claude/: ralph-loop.local.md  settings.json  settings.local.json
.omc/: project-memory.json
CLI/: cmux.swift  cmuxterm.swift  term-mesh.swift
GhosttyTabs.xcodeproj/: project.pbxproj
GhosttyTabsTests/: CmuxWebViewKeyEquivalentTests.swift  UpdatePillReleaseVisibilityTests.swift
GhosttyTabsUITests/: AutomationSocketUITests.swift  BrowserOmnibarSuggestionsUITests.swift  BrowserPaneNavigationKeybindUITests.swift  CloseWorkspaceCmdDUITests.swift  MenuKeyEquivalentRoutingUITests.swift  SidebarResizeUITests.swift  UpdatePillUITests.swift
Resources/: Info.plist  ghostty-termmesh.conf
Sources/: AboutView.swift  AgentRolePreset.swift  AppDelegate+Notifications.swift  AppDelegate.swift  AppearanceSettings.swift  Backport.swift  BrowserHistoryService.swift  BrowserWindowPortal.swift  BuildInfo.swift  CommandPaletteOverlay.swift  ConfigProvider.swift  ContentView.swift  ContentViewUtilities.swift  DaemonService.swift  DashboardController.swift  EnvCompat.swift  FileDropOverlay.swift  GhosttyApp.swift  GhosttyConfig.swift  GhosttyNSView+TextInput.swift  GhosttyPaneSurfaceProvider.swift  GhosttySurfaceScrollView.swift  GhosttyTerminalView.swift  IMEInputBar.swift  KeyboardShortcutSettings.swift  Logging.swift  MenuBarExtra.swift  NSAlert+Sheet.swift  NotificationsPage.swift  PeerDebugMenu.swift  PeerDebugServer.swift  PeerProtoBridge.swift  PeerRelaySession.swift  PeerRelayWindowController.swift  PortScanner.swift  PostHogAnalytics.swift  RolePresetEditorView.swift  ServiceContainer.swift  SettingsView.swift  SidebarDragDrop.swift  (+38 more)
cmuxTests/: CJKIMEInputTests.swift  CmuxWebViewKeyEquivalentTests.swift  GhosttyConfigTests.swift  UpdatePillReleaseVisibilityTests.swift
cmuxUITests/: BrowserOmnibarSuggestionsUITests.swift  BrowserPaneNavigationKeybindUITests.swift  CloseWorkspaceCmdDUITests.swift  MenuKeyEquivalentRoutingUITests.swift  MultiWindowNotificationsUITests.swift  UpdatePillUITests.swift
daemon/: Cargo.toml
daemon/peer-proto/: Cargo.toml  build.rs
daemon/peer-proto/src/: lib.rs
daemon/scripts/: bench.sh
daemon/term-mesh-cli/: Cargo.toml
daemon/term-mesh-cli/src/: main.rs  peer.rs  prompts.rs  pty.rs  rpc.rs  tm_agent.rs  tm_rpc.rs
daemon/term-mesh-peer-relay/: Cargo.toml
daemon/term-mesh-peer-relay/src/: main.rs
daemon/term-meshd/: Cargo.toml
daemon/term-meshd/src/: agent.rs  http.rs  main.rs  monitor.rs  socket.rs  tokens.rs  watcher.rs  worktree.rs
daemon/term-meshd/src/headless/: buffer.rs  cli_builder.rs  mod.rs  protocol.rs
daemon/term-meshd/src/peer/: connection.rs  framing.rs  mod.rs  pty.rs  server.rs  surface.rs
docs/: REFACTORING-STATUS.md  agent-browser-port-spec.md  e2e-vm-setup.md  notifications.md  p0-implementation-guide.md  peer-federation-impl-status.md  peer-federation-protocol.md  peer-federation-ssh-tunnel.md  peer-federation.md  socket-focus-steal-audit.todo.md  team-management-p0-p1-spec.md  tm-agent-architecture-review.md  v2-api-migration.md
docs-site/: README.md  package-lock.json  package.json
scripts/: bench-agent.py  build-sign-upload.sh  bump-version.sh  gen-swift-proto.sh  rebuild.sh  (+25 more)
(+278 files in other folders)
