[workspace]
resolver = "2"
members = ["term-meshd", "term-mesh-cli", "peer-proto", "term-mesh-peer-relay"]

# Force static linking of zlib so term-meshd doesn't depend on Homebrew's libz.
# Without this, libgit2-sys links dynamically to /opt/homebrew/opt/zlib/lib/libz.1.dylib
# which crashes on machines without Homebrew (e.g. DMG installs on user machines).
[workspace.dependencies]
libz-sys = { version = "1", features = ["static"] }
