[package]
name = "term-mesh-cli"
version = "0.72.0"
edition = "2021"
description = "term-mesh CLI — PTY wrapper for AI agents"

[[bin]]
name = "term-mesh-run"
path = "src/main.rs"

[[bin]]
name = "tm-agent"
path = "src/tm_agent.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
glob = "0.3"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
